# cargo-combine

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  release.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: lib.rs  main.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
